--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,6 @@
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
+  <!-- custom js support -->
+  <script type="text/javascript" src="js/custom/imagespacefix.js"></script>
 </head>
